testing git commits 2
Signed-off-by: ElkeDemaerschalk <elke.demaerschalk1@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<button>Testing</button>
+<button>Start</button>
+<button>End</button>
 <script></script>
 </body>
 </html>
