--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<button>Start</button>
-<button>End</button>
+    Objects created in memory
+    <button>Start</button>
+    <button>End</button>
 <script></script>
 </body>
 </html>
